# git-server

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  README.md  README_V2.md  debug-commit.sh  debug_push.sh  debug_test.rs  debug_test.sh  manifest.toml  no_pack_test.sh  nul_fix_test.sh  protocol_trace.sh  quick_test.sh  test_git_server.sh
docs/: http-protocol.md  protocol-v2.md  smart-http-protocol.md
src/: bindings.rs  lib.rs
src/git/: mod.rs  objects.rs  pack.rs  repository.rs
tasks/: README.md  comprehensive-push-validation.md  empty-repository-push.md  pack-file-parsing.md  phase-1-protocol-v2-receive-fix.md  phase-2-binary-pack-format.md  phase-3-empty-repository-integration.md  receive-pack-capabilities.md  receive-pack-handler.md  ref-management.md  repository-updates.md  status-reporting.md
tests/: 01_health_check.sh  02_capability_advertisement.sh  03_ls_refs.sh  04_fetch_command.sh  05_object_info.sh  06_error_handling.sh  07_git_client_compatibility.sh  08_packet_line_validation.sh  09_state_persistence.sh  10_receive_pack_capabilities.sh  11_empty_repository_push.sh  11_empty_repository_push_clean.sh  12_pack_file_parsing.sh  13_repository_updates.sh  README.md  debug-comprehensive.sh  debug-protocol.sh  debug-server.sh  debug_push.sh  focused_test_runner.sh  git_push.sh  initial_objects.txt  initial_refs.txt  ls_refs.sh  quick-test.sh  run_tests.sh  test-clone.sh  test-push-fixed.sh  test-push-protocol-fixed.sh  test-push.sh  test-restart-and-push.sh  test_helpers.sh  validate_protocol_v2_push.py
wit/: world.wit
(+24 files in other folders)
