[package]
name = "git-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
# Add SHA1 library - pure Rust, no_std compatible, widely used
sha1 = "0.10"
# Add hex encoding/decoding utility (very lightweight)
hex = "0.4"
# High-performance zlib compression for Git pack files
flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }

[package.metadata.component]
package = "component:git-server"

[package.metadata.component.target.dependencies]
"theater:simple" = { path = "./wit/deps/theater-simple" }

[package.metadata.component.bindings]
derives = ["serde::Serialize", "serde::Deserialize", "PartialEq"]
generate_unused_types = true
